--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 			
 			<section class="personal-information">
 				<p><a name="information"></a></p>
-				<h2>Личная информация</h2>
-				<p class="left">Кто я</p>
+				<div class="left-column">
+					<h2>Личная информация</h2>
+					<p class="left">Кто я</p>
+				</div>
 				<p class="PI-description">
 				Мне 38 лет, женат, двое детей,<br>
 				коммуникабельный, проактивный,<br>
@@ -69,8 +71,10 @@
 			
 			<section class="knowledge">
 				<p><a name="knowledge"></a></p>
-				<h2>Знания и опыт</h2>
-				<p class="left">Самое начало пути...</p>
+				<div class="left-column">
+					<h2>Знания и опыт</h2>
+					<p class="left">Самое начало пути...</p>
+				</div>
 				<ul class="knowledge-list">
 					<li>
 						<h3><span class="colortext">01 </span> javascript</h3>
@@ -89,8 +93,10 @@
 			
 			<section class="technical-skills">
 				<p><a name="tech"></a></p>
-				<h2> Технические навыки</h2>
-				<p class="left">Я не волшебник, я только учусь</p>
+				<div class="left-column">
+					<h2> Технические навыки</h2>
+					<p class="left">Я не волшебник, я только учусь</p>
+				</div>
 				<ul class="TS-list">
 					<li>
 						<h3><span class="colortext">50% </span>photoshop</h3>
@@ -115,8 +121,10 @@
 			
 			<section class="expirience">
 				<p><a name="expirience"></a></p>
-				<h2>Опыт работы</h2>
-				<p class="left">Армия - школа жизни.</p>
+				<div class="left-column">
+					<h2>Опыт работы</h2>
+					<p class="left">Армия - школа жизни.</p>
+				</div>
 				<ul class="expirience-list">
 					<li>
 						<p><span class="colortext2">2005 - настоящее время</span></p>
@@ -131,8 +139,10 @@
 			
 			<section class="edication">
 				<p><a name="edication"></a></p>
-				<h2>Образование</h2>
-				<p class="left">Учиться никогда не поздно.</p>
+				<div class="left-column">
+					<h2>Образование</h2>
+					<p class="left">Учиться никогда не поздно.</p>
+				</div>
 				<ul class="edication-list">
 					<li>
 						<p><span class="colortext2">2000 - 2005</span></p>
@@ -172,34 +182,41 @@
 				</ul>
 			</section>
 		</main>
-		<footer>
+
+		<footer class="contact-bottom">
 			<p><a name="contact"></a></p>
-			<h2>Контактные данные</h2>
-			<p class="left">Свяжитесь со мной...</p>
-			<ul class="contact-list">
-				<li class="contact-item">
-					<h3>Адрес</h3>
-					<p>
-						Чита, Россия<br>
-						<img src="img/map.png" width="780"
-						height="480" alt="Чита, Россия">
-					</p>
-					<button type="button" class="button">
-						Закрыть
-					</button>
-				</li>
-				<li class="contact-item">
-					<h3>Телефон</h3>
-					<p>+7(914)1292995</p>
-				</li>
-				<li class="contact-item">
-					<h3>Email</h3>
-					<p>faramund21@rambler.ru</p>
-				</li>
-			</ul>
-			<p class="name">евгений</p>
-			<p class="second-name"> Цыбин</p>
-			<div>
+			<div class="contact-bottom-up">
+				<div class="left-column">
+					<h2>Контактные данные</h2>
+					<p class="left">Свяжитесь со мной...</p>
+				</div>
+				<ul class="contact-list">
+					<li class="contact-item">
+						<h3>Адрес</h3>
+						<p>
+							Чита, Россия<br>
+							<img src="img/map.png" width="70"
+							height="40" alt="Чита, Россия">
+						</p>
+						<button type="button" class="button">
+							Закрыть
+						</button>
+					</li>
+					<li class="contact-item">
+						<h3>Телефон</h3>
+						<p>+7(914)1292995</p>
+					</li>
+					<li class="contact-item">
+						<h3>Email</h3>
+						<p>faramund21@rambler.ru</p>
+					</li>
+				</ul>
+			</div>
+			<div class="contact-bottom-down">			
+				<div class="left-column">
+					<p class="name">евгений</p>
+					<p class="second-name"> Цыбин</p>
+				</div>
 				<ul class="social-list">
 					<li><a href="#">Инстаграм</a></li>
 					<li><a href="#">Фейсебук</a></li>
