--- a/index.html
+++ b/index.html
@@ -25,34 +25,39 @@
 			
 			<section class="foto-contact">
 				<a class="foto">
-					<img src="img/index-foto.png" width="300" height="300" alt="Цыбин Евгений Сергеевич">
+					<img src="img/index-foto300.png" width="300" height="300" alt="Цыбин Евгений Сергеевич">
 				</a>
-				<p class="name">евгений</p>
-				<p class="second-name"> Цыбин</p>
-				<p>Web Development & Front-end</p>
-				<div class="social">
-					<ul class="social-list">
-						<li><a href="#">Инстаграм</a></li>
-						<li><a href="#">Фейсебук</a></li>
-						<li><a href="#">Ватсап</a></li>
-						<li><a href="#">Вконтакте</a></li>
+				<div class="name-social-contact">
+					<div class="name-social">
+						<div>
+							<p class="name-top">евгений</p>
+							<p class="second-name-top"> Цыбин</p>
+							<p class="direction">Web Development & Front-end</p>
+						</div>
+						<div class="social">
+							<ul class="social-list">
+								<li><a href="#">Инстаграм</a></li>
+								<li><a href="#">Фейсебук</a></li>
+								<li><a href="#">Ватсап</a></li>
+								<li><a href="#">Вконтакте</a></li>
+							</ul>
+						</div>
+					</div>	
+					<ul class="contact-list">
+						<li class="contact-item">
+							<h3>Адрес</h3>
+							<p>Чита, Россия</p>
+						</li>
+						<li class="contact-item">
+							<h3>Телефон</h3>
+							<p>+7(914)1292995</p>
+						</li>
+						<li class="contact-item">
+							<h3>Email</h3>
+							<p>faramund21@rambler.ru</p>
+						</li>
 					</ul>
 				</div>
-				<h2 class="contact">Контактные данные</h2>
-				<ul class="contact-list">
-					<li class="contact-item">
-						<h3>Адрес</h3>
-						<p>Чита, Россия</p>
-					</li>
-					<li class="contact-item">
-						<h3>Телефон</h3>
-						<p>+7(914)1292995</p>
-					</li>
-					<li class="contact-item">
-						<h3>Email</h3>
-						<p>faramund21@rambler.ru</p>
-					</li>
-				</ul>
 			</section>
 			
 			<section class="personal-information">
@@ -214,8 +219,8 @@
 			</div>
 			<div class="contact-bottom-down">			
 				<div class="left-column">
-					<p class="name">евгений</p>
-					<p class="second-name"> Цыбин</p>
+					<p class="name-bottom">евгений</p>
+					<p class="second-name-bottom"> Цыбин</p>
 				</div>
 				<ul class="social-list">
 					<li><a href="#">Инстаграм</a></li>
