--- a/index.html
+++ b/index.html
@@ -148,43 +148,47 @@
 					<h2>Образование</h2>
 					<p class="left">Учиться никогда не поздно.</p>
 				</div>
-				<ul class="edication-list">
-					<li>
-						<p><span class="colortext2">2000 - 2005</span></p>
-						<h3>Санкт-Петербургское<br>
-						высшее военное училище<br>
-						радиоэлектроники</h3>
-						<p>Инженер по эксплуатации радиоэлектронных систем</p>
-						<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
-						<p>Описание программы обучения, степень, диплом</p>
-					</li>
-					<li>
-						<p><span class="colortext2">2000 - 2005</span></p>
-						<h3>Санкт-Петербургское<br>
-						высшее военное училище<br>
-						радиоэлектроники</h3>
-						<p>Переводчик в сфере профессиональных коммуникаций<br>
-						(Английский язык)</p>
-						<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
-						<p>Описание программы обучения, степень, диплом</p>
-					</li>
-					<li>
-						<p><span class="colortext2">09.2017 - 05.2018</span></p>
-						<h3>Военная академия</h3>
-						<p>Переводчик в сфере профессиональных коммуникаций<br>
-						(Английский язык)</p>
-						<p><span class="colortext2">г. Москва, Российская Федерация</span></p>
-						<p>Описание программы обучения, степень, диплом</p>
-					</li>
-					<li>
-						<p><span class="colortext2">03.2021 - 05.2021</span></p>
-						<h3>Школа SMM Дамира Халилова</h3>
-						<p>Специалист по таргетированной рекламе</p>
-						<p><span class="colortext2">Онлайн</span></p>
-						<p>Facebook, Instagram, ВКонтакте<br>
-						Описание программы обучения, степень, диплом</p>
-					</li>
-				</ul>
+				<div class="edication-column">
+					<ul class="edication-list">
+						<li class="edication-item">
+							<p><span class="colortext2">2000 - 2005</span></p>
+							<h3>Санкт-Петербургское<br>
+							высшее военное училище<br>
+							радиоэлектроники</h3>
+							<p>Инженер по эксплуатации радиоэлектронных систем</p>
+							<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
+							<p>Описание программы обучения, степень, диплом</p>
+						</li>
+						<li class="edication-item">
+							<p><span class="colortext2">2000 - 2005</span></p>
+							<h3>Санкт-Петербургское<br>
+							высшее военное училище<br>
+							радиоэлектроники</h3>
+							<p>Переводчик в сфере профессиональных коммуникаций<br>
+							(Английский язык)</p>
+							<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
+							<p>Описание программы обучения, степень, диплом</p>
+						</li>
+					</ul>
+					<ul class="edication-list">
+						<li class="edication-item">
+							<p><span class="colortext2">09.2017 - 05.2018</span></p>
+							<h3>Военная академия</h3>
+							<p>Переводчик в сфере профессиональных коммуникаций<br>
+							(Английский язык)</p>
+							<p><span class="colortext2">г. Москва, Российская Федерация</span></p>
+							<p>Описание программы обучения, степень, диплом</p>
+						</li>
+						<li class="edication-item">
+							<p><span class="colortext2">03.2021 - 05.2021</span></p>
+							<h3>Школа SMM Дамира Халилова</h3>
+							<p>Специалист по таргетированной рекламе</p>
+							<p><span class="colortext2">Онлайн</span></p>
+							<p>Facebook, Instagram, ВКонтакте<br>
+							Описание программы обучения, степень, диплом</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 
@@ -230,8 +234,6 @@
 				</ul>
 			</div>
 		</footer>
-		
-		<section>
-			
+					
 	</body>
 </html>
