--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Сайт-резюме</title>
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
+		<link rel="icon" href="img/favicon.png" type="image/png">
 	</head>
 	<body>
 		<header class="main-header">
@@ -24,40 +25,47 @@
 			
 			<section class="foto-contact">
 				<a class="foto">
-					<img src="img/index-foto.png" width="300" height="300" alt="Цыбин Евгений Сергеевич">
+					<img src="img/index-foto300.png" width="300" height="300" alt="Цыбин Евгений Сергеевич">
 				</a>
-				<p class="name">евгений</p>
-				<p class="second-name"> Цыбин</p>
-				<p>Web Development & Front-end</p>
-				<div class="social">
-					<ul class="social-list">
-						<li><a href="#">Инстаграм</a></li>
-						<li><a href="#">Фейсебук</a></li>
-						<li><a href="#">Ватсап</a></li>
-						<li><a href="#">Вконтакте</a></li>
+				<div class="name-social-contact">
+					<div class="name-social">
+						<div>
+							<p class="name-top">евгений</p>
+							<p class="second-name-top"> Цыбин</p>
+							<p class="direction">Web Development & Front-end</p>
+						</div>
+						<div class="social">
+							<ul class="social-list">
+								<li><a href="#">Инстаграм</a></li>
+								<li><a href="#">Фейсебук</a></li>
+								<li><a href="#">Ватсап</a></li>
+								<li><a href="#">Вконтакте</a></li>
+							</ul>
+						</div>
+					</div>	
+					<ul class="contact-list">
+						<li class="contact-item">
+							<h3>Адрес</h3>
+							<p>Чита, Россия</p>
+						</li>
+						<li class="contact-item">
+							<h3>Телефон</h3>
+							<p>+7(914)1292995</p>
+						</li>
+						<li class="contact-item">
+							<h3>Email</h3>
+							<p>faramund21@rambler.ru</p>
+						</li>
 					</ul>
 				</div>
-				<h2 class="contact">Контактные данные</h2>
-				<ul class="contact-list">
-					<li class="contact-item">
-						<h3>Адрес</h3>
-						<p>Чита, Россия</p>
-					</li>
-					<li class="contact-item">
-						<h3>Телефон</h3>
-						<p>+7(914)1292995</p>
-					</li>
-					<li class="contact-item">
-						<h3>Email</h3>
-						<p>faramund21@rambler.ru</p>
-					</li>
-				</ul>
 			</section>
 			
 			<section class="personal-information">
 				<p><a name="information"></a></p>
-				<h2>Личная информация</h2>
-				<p class="left">Кто я</p>
+				<div class="left-column">
+					<h2>Личная информация</h2>
+					<p class="left">Кто я</p>
+				</div>
 				<p class="PI-description">
 				Мне 38 лет, женат, двое детей,<br>
 				коммуникабельный, проактивный,<br>
@@ -68,8 +76,10 @@
 			
 			<section class="knowledge">
 				<p><a name="knowledge"></a></p>
-				<h2>Знания и опыт</h2>
-				<p class="left">Самое начало пути...</p>
+				<div class="left-column">
+					<h2>Знания и опыт</h2>
+					<p class="left">Самое начало пути...</p>
+				</div>
 				<ul class="knowledge-list">
 					<li>
 						<h3><span class="colortext">01 </span> javascript</h3>
@@ -88,8 +98,10 @@
 			
 			<section class="technical-skills">
 				<p><a name="tech"></a></p>
-				<h2> Технические навыки</h2>
-				<p class="left">Я не волшебник, я только учусь</p>
+				<div class="left-column">
+					<h2> Технические навыки</h2>
+					<p class="left">Я не волшебник, я только учусь</p>
+				</div>
 				<ul class="TS-list">
 					<li>
 						<h3><span class="colortext">50% </span>photoshop</h3>
@@ -114,8 +126,10 @@
 			
 			<section class="expirience">
 				<p><a name="expirience"></a></p>
-				<h2>Опыт работы</h2>
-				<p class="left">Армия - школа жизни.</p>
+				<div class="left-column">
+					<h2>Опыт работы</h2>
+					<p class="left">Армия - школа жизни.</p>
+				</div>
 				<ul class="expirience-list">
 					<li>
 						<p><span class="colortext2">2005 - настоящее время</span></p>
@@ -130,75 +144,89 @@
 			
 			<section class="edication">
 				<p><a name="edication"></a></p>
-				<h2>Образование</h2>
-				<p class="left">Учиться никогда не поздно.</p>
-				<ul class="edication-list">
-					<li>
-						<p><span class="colortext2">2000 - 2005</span></p>
-						<h3>Санкт-Петербургское<br>
-						высшее военное училище<br>
-						радиоэлектроники</h3>
-						<p>Инженер по эксплуатации радиоэлектронных систем</p>
-						<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
-						<p>Описание программы обучения, степень, диплом</p>
-					</li>
-					<li>
-						<p><span class="colortext2">2000 - 2005</span></p>
-						<h3>Санкт-Петербургское<br>
-						высшее военное училище<br>
-						радиоэлектроники</h3>
-						<p>Переводчик в сфере профессиональных коммуникаций<br>
-						(Английский язык)</p>
-						<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
-						<p>Описание программы обучения, степень, диплом</p>
-					</li>
-					<li>
-						<p><span class="colortext2">09.2017 - 05.2018</span></p>
-						<h3>Военная академия</h3>
-						<p>Переводчик в сфере профессиональных коммуникаций<br>
-						(Английский язык)</p>
-						<p><span class="colortext2">г. Москва, Российская Федерация</span></p>
-						<p>Описание программы обучения, степень, диплом</p>
-					</li>
-					<li>
-						<p><span class="colortext2">03.2021 - 05.2021</span></p>
-						<h3>Школа SMM Дамира Халилова</h3>
-						<p>Специалист по таргетированной рекламе</p>
-						<p><span class="colortext2">Онлайн</span></p>
-						<p>Facebook, Instagram, ВКонтакте<br>
-						Описание программы обучения, степень, диплом</p>
-					</li>
-				</ul>
+				<div class="left-column">
+					<h2>Образование</h2>
+					<p class="left">Учиться никогда не поздно.</p>
+				</div>
+				<div class="edication-column">
+					<ul class="edication-list">
+						<li class="edication-item">
+							<p><span class="colortext2">2000 - 2005</span></p>
+							<h3>Санкт-Петербургское<br>
+							высшее военное училище<br>
+							радиоэлектроники</h3>
+							<p>Инженер по эксплуатации радиоэлектронных систем</p>
+							<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
+							<p>Описание программы обучения, степень, диплом</p>
+						</li>
+						<li class="edication-item">
+							<p><span class="colortext2">2000 - 2005</span></p>
+							<h3>Санкт-Петербургское<br>
+							высшее военное училище<br>
+							радиоэлектроники</h3>
+							<p>Переводчик в сфере профессиональных коммуникаций<br>
+							(Английский язык)</p>
+							<p><span class="colortext2">г. Санкт-Петербург, Российская Федерация</span></p>
+							<p>Описание программы обучения, степень, диплом</p>
+						</li>
+					</ul>
+					<ul class="edication-list">
+						<li class="edication-item">
+							<p><span class="colortext2">09.2017 - 05.2018</span></p>
+							<h3>Военная академия</h3>
+							<p>Переводчик в сфере профессиональных коммуникаций<br>
+							(Английский язык)</p>
+							<p><span class="colortext2">г. Москва, Российская Федерация</span></p>
+							<p>Описание программы обучения, степень, диплом</p>
+						</li>
+						<li class="edication-item">
+							<p><span class="colortext2">03.2021 - 05.2021</span></p>
+							<h3>Школа SMM Дамира Халилова</h3>
+							<p>Специалист по таргетированной рекламе</p>
+							<p><span class="colortext2">Онлайн</span></p>
+							<p>Facebook, Instagram, ВКонтакте<br>
+							Описание программы обучения, степень, диплом</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
-		<footer>
+
+		<footer class="contact-bottom">
 			<p><a name="contact"></a></p>
-			<h2>Контактные данные</h2>
-			<p class="left">Свяжитесь со мной...</p>
-			<ul class="contact-list">
-				<li class="contact-item">
-					<h3>Адрес</h3>
-					<p>
-						Чита, Россия<br>
-						<img src="img/map.png" width="780"
-						height="480" alt="Чита, Россия">
-					</p>
-					<button type="button" class="button">
-						Закрыть
-					</button>
-				</li>
-				<li class="contact-item">
-					<h3>Телефон</h3>
-					<p>+7(914)1292995</p>
-				</li>
-				<li class="contact-item">
-					<h3>Email</h3>
-					<p>faramund21@rambler.ru</p>
-				</li>
-			</ul>
-			<p class="name">евгений</p>
-			<p class="second-name"> Цыбин</p>
-			<div>
+			<div class="contact-bottom-up">
+				<div class="left-column">
+					<h2>Контактные данные</h2>
+					<p class="left">Свяжитесь со мной...</p>
+				</div>
+				<ul class="contact-list">
+					<li class="contact-item">
+						<h3>Адрес</h3>
+						<p>
+							Чита, Россия<br>
+							<img src="img/map.png" width="70"
+							height="40" alt="Чита, Россия">
+						</p>
+						<button type="button" class="button">
+							Закрыть
+						</button>
+					</li>
+					<li class="contact-item">
+						<h3>Телефон</h3>
+						<p>+7(914)1292995</p>
+					</li>
+					<li class="contact-item">
+						<h3>Email</h3>
+						<p>faramund21@rambler.ru</p>
+					</li>
+				</ul>
+			</div>
+			<div class="contact-bottom-down">			
+				<div class="left-column"></div>
+				<div class="left-column">
+					<p class="name-bottom">евгений</p>
+					<p class="second-name-bottom"> Цыбин</p>
+				</div>
 				<ul class="social-list">
 					<li><a href="#">Инстаграм</a></li>
 					<li><a href="#">Фейсебук</a></li>
@@ -207,8 +235,6 @@
 				</ul>
 			</div>
 		</footer>
-		
-		<section>
-			
+					
 	</body>
 </html>
