--- a/index.html
+++ b/index.html
@@ -34,27 +34,33 @@
 							<p class="second-name-top"> Цыбин</p>
 							<p class="direction">Web Development & Front-end</p>
 						</div>
-						<div class="social">
-							<ul class="social-list">
-								<li><a href="#">Инстаграм</a></li>
-								<li><a href="#">Фейсебук</a></li>
-								<li><a href="#">Ватсап</a></li>
-								<li><a href="#">Вконтакте</a></li>
-							</ul>
-						</div>
+						<ul class="social-list">
+							<li class="social-item">
+								<a href="https://www.instagram.com/evgeny_tsybin/" title="Инстаграм" type="button" class="button"><img src="img/instagram.png" width="50" height="50"></a>
+							</li>
+							<li class="social-item">
+								<a href="https://www.facebook.com/people/Евгений-Цыбин/100004605665018/" title="Фейсбук" type="button" class="button"><img src="img/facebook.png" width="50" height="50"></a>
+							</li>
+							<li class="social-item">
+								<a href="https://vk.com/id314358357" title="ВК" type="button" class="button"><img src="img/VK.png" width="50" height="50"></a>
+							</li>
+							<li class="social-item">
+								<a href="https://wa.me/79141292995" title="Ватсап" type="button" class="button"><img src="img/Whatsapp.png" width="50" height="50"></a>
+							</li>
+						</ul>
 					</div>	
 					<ul class="contact-list">
 						<li class="contact-item">
 							<h3>Адрес</h3>
-							<p>Чита, Россия</p>
+							<a class="button" href="map.html">Чита, Россия</a>
 						</li>
 						<li class="contact-item">
 							<h3>Телефон</h3>
-							<p>+7(914)1292995</p>
+							<a class="button" href="tel:+79141292995">+7(914)1292995</a>
 						</li>
 						<li class="contact-item">
 							<h3>Email</h3>
-							<p>faramund21@rambler.ru</p>
+							<a class="button" href="mailto:faramund21@rambler.ru">faramund21@rambler.ru</a>
 						</li>
 					</ul>
 				</div>
@@ -201,42 +207,43 @@
 					<h2>Контактные данные</h2>
 					<p class="left">Свяжитесь со мной...</p>
 				</div>
-				<ul class="contact-list">
-					<li class="contact-item">
-						<h3>Адрес</h3>
-						<p>
-							Чита, Россия<br>
-							<img src="img/map.png" width="70"
-							height="40" alt="Чита, Россия">
-						</p>
-						<button type="button" class="button">
-							Закрыть
-						</button>
-					</li>
-					<li class="contact-item">
-						<h3>Телефон</h3>
-						<p>+7(914)1292995</p>
-					</li>
-					<li class="contact-item">
-						<h3>Email</h3>
-						<p>faramund21@rambler.ru</p>
-					</li>
-				</ul>
-			</div>
-			<div class="contact-bottom-down">			
-				<div class="left-column"></div>
-				<div class="left-column">
-					<p class="name-bottom">евгений</p>
-					<p class="second-name-bottom"> Цыбин</p>
+				<div class="footer-right-side">
+					<ul class="contact-list">
+						<li class="contact-item">
+							<h3>Адрес</h3>
+							<a class="button" href="map.html">Чита, Россия</a>
+						</li>
+						<li class="contact-item">
+							<h3>Телефон</h3>
+							<a class="button" href="tel:+79141292995">+7(914)1292995</a>
+						</li>
+						<li class="contact-item">
+							<h3>Email</h3>
+							<a class="button" href="mailto:faramund21@rambler.ru">faramund21@rambler.ru</a>
+						</li>
+					</ul>
+					<div class="contact-bottom-down">									
+						<div class="footer-left-column">
+							<p class="name-bottom">евгений</p>
+							<p class="second-name-bottom"> Цыбин</p>
+						</div>
+						<ul class="social-list">
+							<li class="social-item">
+								<a href="https://www.instagram.com/evgeny_tsybin/" title="Инстаграм" type="button" class="button"><img src="img/instagram.png" width="50" height="50"></a>
+							</li>
+							<li class="social-item">
+								<a href="https://www.facebook.com/people/Евгений-Цыбин/100004605665018/" title="Фейсбук" type="button" class="button"><img src="img/facebook.png" width="50" height="50"></a>
+							</li>
+							<li class="social-item">
+								<a href="https://vk.com/id314358357" title="ВК" type="button" class="button"><img src="img/VK.png" width="50" height="50"></a>
+							</li>
+							<li class="social-item">
+								<a href="https://wa.me/79141292995" title="Ватсап" type="button" class="button"><img src="img/Whatsapp.png" width="50" height="50"></a>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<ul class="social-list">
-					<li><a href="#">Инстаграм</a></li>
-					<li><a href="#">Фейсебук</a></li>
-					<li><a href="#">Ватсап</a></li>
-					<li><a href="#">Вконтакте</a></li>
-				</ul>
-			</div>
+			</div>			
 		</footer>
-					
 	</body>
 </html>
