--- a/index.html
+++ b/index.html
@@ -157,50 +157,52 @@
 					<h2>Опыт работы</h2>
 					<p class="left">Армия - школа жизни.</p>
 				</div>
-				<ul class="expirience-list">
-					<li class="expirience-item">
-						<div class="EI-left">
-							<div class="EI-left-main">
-								<p><span class="colortext2">2005 - настоящее время</span></p>
-								<h3>Вооруженные силы РФ</h3>
-								<p>руководящий состав</p>
-								<p><span class="colortext2">Российская Федерация</span></p>
+				<div class="expirience-right-column">
+					<ul class="expirience-list">
+						<li class="expirience-item">
+							<div class="EI-left">
+								<div class="EI-left-main">
+									<p><span class="colortext2">2005 - настоящее время</span></p>
+									<h3>Вооруженные силы РФ</h3>
+									<p>руководящий состав</p>
+									<p><span class="colortext2">Российская Федерация</span></p>
+								</div>
 							</div>
-						</div>
-						<div class="EI-right">
-							<p>Описание карьерного роста<br>
-							в вооруженных силах</p>
-						</div>
-					</li>
-					<li class="expirience-item">
-						<div class="EI-left">
-							<div class="EI-left-main">
-								<p><span class="colortext2">2005 - настоящее время</span></p>
-								<h3>Вооруженные силы РФ</h3>
-								<p>руководящий состав</p>
-								<p><span class="colortext2">Российская Федерация</span></p>
+							<div class="EI-right">
+								<p>Описание карьерного роста<br>
+								в вооруженных силах</p>
 							</div>
-						</div>
-						<div class="EI-right">
-							<p>Описание карьерного роста<br>
-							в вооруженных силах</p>
-						</div>
-					</li>
-					<li class="expirience-item">
-						<div class="EI-left">
-							<div class="EI-left-main">
-								<p><span class="colortext2">2005 - настоящее время</span></p>
-								<h3>Вооруженные силы РФ</h3>
-								<p>руководящий состав</p>
-								<p><span class="colortext2">Российская Федерация</span></p>
+						</li>
+						<li class="expirience-item">
+							<div class="EI-left">
+								<div class="EI-left-main">
+									<p><span class="colortext2">2005 - настоящее время</span></p>
+									<h3>Вооруженные силы РФ</h3>
+									<p>руководящий состав</p>
+									<p><span class="colortext2">Российская Федерация</span></p>
+								</div>
 							</div>
-						</div>
-						<div class="EI-right">
-							<p>Описание карьерного роста<br>
-							в вооруженных силах</p>
-						</div>
-					</li>
-				</ul>
+							<div class="EI-right">
+								<p>Описание карьерного роста<br>
+								в вооруженных силах</p>
+							</div>
+						</li>
+						<li class="expirience-item">
+							<div class="EI-left">
+								<div class="EI-left-main">
+									<p><span class="colortext2">2005 - настоящее время</span></p>
+									<h3>Вооруженные силы РФ</h3>
+									<p>руководящий состав</p>
+									<p><span class="colortext2">Российская Федерация</span></p>
+								</div>
+							</div>
+							<div class="EI-right">
+								<p>Описание карьерного роста<br>
+								в вооруженных силах</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 			
 			<section class="edication">
@@ -273,7 +275,7 @@
 			</section>
 		</main>
 
-		<footer class="contact-bottom">
+		<footer class="footer">
 			<p><a name="contact"></a></p>
 			<div class="contact-bottom-up">
 				<div class="left-column">
